[gd_scene load_steps=19 format=2]

[ext_resource path="res://Sprite/Attack anim.png" type="Texture" id=1]
[ext_resource path="res://Script/PlayerComponent.gd" type="Script" id=2]
[ext_resource path="res://Script/PhysicComponent.gd" type="Script" id=3]
[ext_resource path="res://Script/PlayerAnimator.gd" type="Script" id=4]
[ext_resource path="res://Sprite/8_dir_main.png" type="Texture" id=5]
[ext_resource path="res://Script/HealthComponent.gd" type="Script" id=6]
[ext_resource path="res://Script/AttackAnimHandler.gd" type="Script" id=7]
[ext_resource path="res://Script/AttackSystem.gd" type="Script" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 31.5, 30 )

[sub_resource type="Animation" id=42]
resource_name = "PlayerDown"
length = 0.583333
loop = true
step = 0.0833333
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 29, -0.25, 0, 0.25, 0, 30, -0.25, 0, 0.25, 0, 31, -0.25, 0, 0.25, 0, 32, -0.25, 0, 0.25, 0, 33, -0.25, 0, 0.25, 0, 34, -0.25, 0, 0.25, 0, 34, -0.25, 0, 0.25, 0, 34, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333 )
}

[sub_resource type="Animation" id=43]
resource_name = "PlayerDownRight"
length = 0.7
loop = true
step = 0.0833333
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 21, -0.25, 0, 0.25, 0, 22, -0.25, 0, 0.25, 0, 23, -0.25, 0, 0.25, 0, 24, -0.25, 0, 0.25, 0, 25, -0.25, 0, 0.25, 0, 26, -0.25, 0, 0.25, 0, 27, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 )
}

[sub_resource type="Animation" id=41]
resource_name = "PlayerRight"
length = 0.6
loop = true
step = 0.0833333
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 14, -0.25, 0, 0.25, 0, 15, -0.25, 0, 0.25, 0, 16, -0.25, 0, 0.25, 0, 17, -0.25, 0, 0.25, 0, 18, -0.25, 0, 0.25, 0, 19, -0.25, 0, 0.25, 0, 20, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 )
}

[sub_resource type="Animation" id=38]
resource_name = "PlayerUp"
length = 0.583333
loop = true
step = 0.0833333
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 0, -0.25, 0, 0.25, 0, 1, -0.25, 0, 0.25, 0, 2, -0.25, 0, 0.25, 0, 3, -0.25, 0, 0.25, 0, 4, -0.25, 0, 0.25, 0, 5, -0.25, 0, 0.25, 0, 6, -0.25, 0, 0.25, 0, 7, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.0833333, 0.166667, 0.25, 0.333333, 0.416667, 0.5, 0.583333 )
}

[sub_resource type="Animation" id=40]
resource_name = "PlayerUpRight"
length = 0.6
loop = true
step = 0.0833333
tracks/0/type = "bezier"
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 7, -0.25, 0, 0.25, 0, 8, -0.25, 0, 0.25, 0, 9, -0.25, 0, 0.25, 0, 10, -0.25, 0, 0.25, 0, 11, -0.25, 0, 0.25, 0, 12, -0.25, 0, 0.25, 0, 13, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 )
}

[sub_resource type="Animation" id=39]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("PlayerSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "bezier"
tracks/1/path = NodePath(".:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/2/type = "bezier"
tracks/2/path = NodePath(".:frame_coords:x")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"points": PoolRealArray( 1, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/3/type = "bezier"
tracks/3/path = NodePath(".:frame_coords:y")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"points": PoolRealArray( 4, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/4/type = "bezier"
tracks/4/path = NodePath("../AttackSprite:frame")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"points": PoolRealArray( 13, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/5/type = "value"
tracks/5/path = NodePath("../Area2D/PlayerAttackHit:disabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}

[sub_resource type="Animation" id=46]
resource_name = "AttackAnim"
length = 0.4
tracks/0/type = "bezier"
tracks/0/path = NodePath("AttackSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 12, -0.25, 0, 0.25, 0, 13, -0.25, 0, 0.25, 0, 14, -0.25, 0, 0.25, 0, 15, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.4 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[sub_resource type="Animation" id=47]
length = 0.001
tracks/0/type = "bezier"
tracks/0/path = NodePath("AttackSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"points": PoolRealArray( 13, -0.25, 0, 0.25, 0 ),
"times": PoolRealArray( 0 )
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Area2D/PlayerAttackHit:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ false ]
}

[sub_resource type="RectangleShape2D" id=45]
extents = Vector2( 66.5, 68 )

[node name="PlayerNode" type="Node2D"]
position = Vector2( 513, 301 )
script = ExtResource( 2 )

[node name="PhysicComponent" type="KinematicBody2D" parent="."]
script = ExtResource( 3 )

[node name="PlayerHurtbox" type="CollisionShape2D" parent="PhysicComponent"]
modulate = Color( 0.913725, 0, 0, 1 )
shape = SubResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="PhysicComponent"]
root_node = NodePath("../PlayerSprite")
anims/PlayerDown = SubResource( 42 )
anims/PlayerDownRight = SubResource( 43 )
anims/PlayerRight = SubResource( 41 )
anims/PlayerUp = SubResource( 38 )
anims/PlayerUpRight = SubResource( 40 )
anims/RESET = SubResource( 39 )
script = ExtResource( 4 )

[node name="PlayerSprite" type="Sprite" parent="PhysicComponent"]
position = Vector2( 2, 0 )
texture = ExtResource( 5 )
hframes = 7
vframes = 5
frame = 29

[node name="Camera2D" type="Camera2D" parent="PhysicComponent/PlayerSprite"]
current = true

[node name="AttackSprite" type="Sprite" parent="PhysicComponent"]
position = Vector2( -2, -11 )
scale = Vector2( 2.1875, 2.5 )
z_index = 1
texture = ExtResource( 1 )
hframes = 4
vframes = 4
frame = 13

[node name="AttackAnimHandler" type="AnimationPlayer" parent="PhysicComponent"]
anims/AttackAnim = SubResource( 46 )
anims/RESET = SubResource( 47 )
script = ExtResource( 7 )

[node name="Area2D" type="Area2D" parent="PhysicComponent"]
collision_layer = 4
script = ExtResource( 8 )

[node name="PlayerAttackHit" type="CollisionShape2D" parent="PhysicComponent/Area2D"]
position = Vector2( 0.5, -8 )
shape = SubResource( 45 )

[node name="HealthComponent" type="Node2D" parent="."]
script = ExtResource( 6 )

[connection signal="play_animation" from="." to="PhysicComponent/AnimationPlayer" method="_on_PlayerNode_play_animation"]
[connection signal="play_attack_anim" from="." to="PhysicComponent/AttackAnimHandler" method="_on_PlayerNode_play_attack_anim"]
[connection signal="animation_finished" from="PhysicComponent/AttackAnimHandler" to="PhysicComponent/AttackAnimHandler" method="_on_AttackAnimHandler_animation_finished"]
[connection signal="died" from="HealthComponent" to="." method="_on_HealthComponent_died"]
